Upgrade pulumi-terraform-bridge to v3.129.2 (#6367)
This PR was generated via `$ upgrade-provider pulumi/pulumi-aws
--kind=bridge --pr-reviewers=guineveresaenger
--allow-missing-docs=false`.

---

- Upgrading pulumi-terraform-bridge from v3.128.0 to v3.129.2.

---------

Co-authored-by: guineveresaenger <guinevere@pulumi.com>